# cpp_learn

./: .gitignore  CMakeLists.txt  README.md
benchmarks/containers/: static_vector_bench.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake  Warnings.cmake
core/containers/: static_vector.hpp
core/memory/: scope_guard.hpp  unique_resource.hpp
core/utility/: span_like.hpp
docs/glossary/: week-01-core-terms.md
docs/phases/: phase-a-engineering-foundation-and-object-model.md  phase-b-generic-design-and-interface-quality.md  phase-c-runtime-mechanics-performance-and-concurrency.md  phase-d-system-integration-and-portfolio-project.md
docs/preview/: index.html  link-check.test.mjs  preview-core.mjs  preview-manifest.json  preview.css  preview.js  preview.test.mjs
docs/superpowers/plans/: 2026-04-08-cpp-engineering-mastery-lab-implementation-plan.md
docs/superpowers/specs/: 2026-04-08-cpp-engineering-mastery-lab-design.md
missions/week-01-project-bootstrap-and-value-semantics/: README.md
missions/week-02-raii-and-resource-management/: README.md
missions/week-03-small-container-and-exception-safety/: README.md
notes/weekly/: week-01.md  week-02.md  week-03.md
tests/core/: scope_guard.test.cpp  span_like.test.cpp  static_vector.test.cpp  unique_resource.test.cpp
